Fix settings/Docker column resizer alignment and runtime rebinding

--- a/src/folderview.plus/usr/local/emhttp/plugins/folderview.plus/styles/docker.css
+++ b/src/folderview.plus/usr/local/emhttp/plugins/folderview.plus/styles/docker.css
@@ -30,7 +30,7 @@ th.fvplus-runtime-resizable {
 th.fvplus-runtime-resizable .fvplus-runtime-col-resizer {
     position: absolute;
     top: 0;
-    right: 0;
+    right: -7px;
     width: 14px;
     height: 100%;
     border: 0;
